--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -9,6 +9,24 @@
   justify-content: space-between;
 }
 .hero{
-
   max-width: 600px;
+
+  >span{
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  h1{
+    font-size: 4.5rem;
+    line-height: 4.5rem;
+    font-weight: 900;
+    margin-top: 2.5rem;
+  }
+  span{
+    color: var(--cyan-500);
+    font-weight: bold;
+  }
+  button{
+    margin-top: 2.5rem;
+  }
 }
