--- a/src/components/SubscribeButton/styles.module.scss
+++ b/src/components/SubscribeButton/styles.module.scss
@@ -3,7 +3,7 @@
   height: 4rem;
   border: 0;
   border-radius: 2rem;
-  background: var(--pink-500);
+  background: var(--green-500);
   color:(--gray-900);
   font-size: 1.25 rem;
   font-weight: bold;
