--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -50,7 +50,7 @@
       position: absolute;
       bottom: 1px;
       left: 0;
-      background: var(--pink-500);
+      background: var(--green-500);
     }
 
   }
